--- a/index.html
+++ b/index.html
@@ -1,8 +1,67 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
+<body class="bg-cover bg-center bg-cover h-screen" style="background-image: url(/assets/sinkssysbg.png);">
+
+  <header class="bg-slate-700 h-16 w-full fixed  ">
+    <div class="flex flex-col justify-center items-center">
+      <h1 class="font-mono italic font-bold text-gray-300 text-3xl box-border flex-1"><i
+          class="fa-solid fa-sink"></i>Sinks R Us</h1>
+      <p class="font-sans font-semibold text-orange-300 text-xs box-border flex-1">Your one-stop shop for all types of
+        sinks</p>
+    </div>
+  </header>
+
+  <div class="flex justify-center items-center h-screen">
+    <div class="w-96 p-8 space-y-4 shadow-lg bg-white rounded-lg">
+      <h1 class="font-sans font-bold text-3xl block text-center text-orange-400"><i
+          class="fa-solid fa-hand-sparkles"></i></i></i></i>Welcome to Sinks!</h1>
+      <hr class=>
+
+      <div class="space-y-3">
+        <label for="username" class="block text-base mb-2">Username</label>
+        <input type="text" id="username"
+          class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-zinc-900 rounded-lg"
+          placeholder="Enter Username">
+      </div>
+
+      <div class="space-y-3">
+        <label for="password" class="block text-base mb-2">Password</label>
+        <input type="password" id="password"
+          class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-zinc-900 rounded-lg"
+          placeholder="Enter Password">
+      </div>
+
+      <div class="flex justify-between items-center">
+        <div>
+          <input type="checkbox">
+          <label>Remember Me</label>
+        </div>
+
+        <div>
+          <a href="#" class="font-semibold text-orange-700">Forgot Password?</a>
+        </div>
+      </div>
+
+      <div>
+        <form action="employee_list.html" method="GET"></a>
+          <button type="submit"
+            class="border-2 py-1 w-full rounded-full border-slate-700 bg-slate-700 text-orange-300 hover:bg-orange-300 hover:text-slate-800 hover:border-orange-300  shadow-md shadow-slate-700">
+            Login</button>
+        </form>
+      </div>
+    </div>
+
+
+</body>
+
 </html>
