Updated Login Page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="bg-cover bg-center bg-cover h-screen" style="background-image: url(/assets/sinkssysbg.png);">
+<body class="bg-cover bg-center bg-cover h-screen" style="background-image: url(/assets/sinkssysbg2.png);">
 
   <header class="bg-slate-700 h-16 w-full fixed  ">
     <div class="flex flex-col justify-center items-center">
