--- a/employee_list.html
+++ b/employee_list.html
@@ -6,7 +6,7 @@
     <title>Employee List</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100">
+<body class="h-screen flex items-center justify-center bg-slate-300">
     <div class="container mx-auto p-4">
         <h1 class="text-2xl font-bold mb-4">Employee List</h1>
         <table class="table-auto w-full bg-white shadow-md rounded-lg">
