--- a/employee_list.html
+++ b/employee_list.html
@@ -5,132 +5,143 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee List</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="h-screen flex items-center justify-center bg-slate-300">
-    <div class="container mx-auto p-4">
-        <h1 class="text-2xl font-bold mb-4">Employee List</h1>
-        <table class="table-auto w-full bg-white shadow-md rounded-lg">
-            <thead>
-                <tr class="bg-gray-200">
-                    <th class="px-4 py-2">Name</th>
-                    <th class="px-4 py-2">Job Title</th>
-                    <th class="px-4 py-2">Department</th>
-                    <th class="px-4 py-2">Email</th>
-                    <th class="px-4 py-2">Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td class="border px-4 py-2">Ivan Petrov</td>
-                    <td class="border px-4 py-2">Software Engineer</td>
-                    <td class="border px-4 py-2">IT</td>
-                    <td class="border px-4 py-2">ivan.petrov@sinksrus.com</td>
-                    <td class="border px-4 py-3">
-                      <a href="#ivan" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View</a>
-                      <div id="ivan" class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 items-center justify-center target:flex">
+  <header class="bg-slate-700 h-16 w-full fixed top-0">
+    <div class="flex flex-col justify-center items-center">
+      <h1 class="font-mono italic font-bold text-gray-300 text-3xl box-border flex-1"><i
+          class="fa-solid fa-sink"></i>Sinks R Us</h1>
+      <p class="font-sans font-semibold text-orange-300 text-xs box-border flex-1">Your one-stop shop for all types of
+        sinks</p>
+    </div>
+  </header>
+  <div class="container mx-auto p-4">
+      <h1 class="text-2xl font-bold mb-4">Employee List</h1>
+      <table class="table-auto w-full bg-white shadow-md rounded-lg">
+          <thead>
+              <tr class="bg-gray-200">
+                  <th class="px-4 py-2">Name</th>
+                  <th class="px-4 py-2">Job Title</th>
+                  <th class="px-4 py-2">Department</th>
+                  <th class="px-4 py-2">Email</th>
+                  <th class="px-4 py-2">Action</th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr>
+                  <td class="border px-4 py-2">Ivan Petrov</td>
+                  <td class="border px-4 py-2">Software Engineer</td>
+                  <td class="border px-4 py-2">IT</td>
+                  <td class="border px-4 py-2">ivan.petrov@sinksrus.com</td>
+                  <td class="border px-4 py-3">
+                    <a href="#ivan" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View</a>
+                    <div id="ivan" class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 items-center justify-center target:flex">
+                      <div class="bg-white rounded-lg p-6 w-96 relative">
+                        <a href="#" class="absolute top-3 right-3 text-gray-500 text-2xl hover:text-gray-700">x</a>
+
+                        <h2 class="text-2xl font-semibold mb-4">Employee Details</h2>
+                        <ul class="text-base">
+                          <li>Contact Number: 555-6789</li>
+                          <li>Address: 12 Red Square, Moscow</li>
+                          <li>Sex: Male</li>
+                          <li>Marital Status: Single</li>
+                        </ul>
+                      </div>
+                    </div>
+                </td>
+              </tr>
+
+              <tr>
+                  <td class="border px-4 py-2">Pedro Los Baños</td>
+                  <td class="border px-4 py-2">Marketing Manager</td>
+                  <td class="border px-4 py-2">Marketing</td>
+                  <td class="border px-4 py-2">pedro_los_banos@sinksrus.com</td>
+                  <td class="border px-4 py-3">
+                    <a href="#pedro" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View</a>
+                    <div id="pedro" class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 items-center justify-center target:flex">
+                      <div class="bg-white rounded-lg p-6 w-96 relative">
+                        <a href="#" class="absolute top-3 right-3 text-gray-500 text-2xl hover:text-gray-700">x</a>
+                        <h2 class="text-2xl font-semibold mb-4">Employee Details</h2>
+                        <ul class="text-base">
+                          <li>Contact Number: n/a </li>
+                          <li>Address: 123 Mabini St</li>
+                          <li>Sex: Male</li>
+                          <li>Marital Status: Married</li>
+                        </ul>
+                      </div>
+                    </div>
+                </td>
+              </tr>
+              
+              <tr>
+                  <td class="border px-4 py-2">Ana Gómez</td>
+                  <td class="border px-4 py-2">HR Specialist</td>
+                  <td class="border px-4 py-2">HR</td>
+                  <td class="border px-4 py-2">ana.gomez@sinksrus.com</td>
+                  <td class="border px-4 py-3">
+                      <a href="#ana" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View</a>
+                      <div id="ana" class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 items-center justify-center target:flex">
                         <div class="bg-white rounded-lg p-6 w-96 relative">
                           <a href="#" class="absolute top-3 right-3 text-gray-500 text-2xl hover:text-gray-700">x</a>
-
+                          <h2 class="text-2xl font-semibold mb-4">Employee Details</h2>
+                            <ul class="text-base">
+                              <li>Contact Number: 555-1526</li>
+                              <li>Address: n/a</li>
+                              <li>Sex: Female</li>
+                              <li>Marital Status: Divorced</li>
+                            </ul>
+                        </div>
+                      </div>
+                  </td>
+              </tr>
+              <tr>
+                  <td class="border px-4 py-2">John Wu</td>
+                  <td class="border px-4 py-2">Sales Associate</td>
+                  <td class="border px-4 py-2">Sales</td>
+                  <td class="border px-4 py-2">john.wu@sinksrus.com</td>
+                  <td class="border px-4 py-3">
+                      <a href="#john" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View</a>
+                      <div id="john" class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 items-center justify-center target:flex">
+                        <div class="bg-white rounded-lg p-6 w-96 relative">
+                          <a href="#" class="absolute top-3 right-3 text-gray-500 text-2xl hover:text-gray-700">x</a>
                           <h2 class="text-2xl font-semibold mb-4">Employee Details</h2>
                           <ul class="text-base">
-                            <li>Contact Number: 555-6789</li>
-                            <li>Address: 12 Red Square, Moscow</li>
+                            <li>Contact Number: 555-6925</li>
+                            <li>Address: 456 Rizal St</li>
                             <li>Sex: Male</li>
                             <li>Marital Status: Single</li>
                           </ul>
                         </div>
                       </div>
                   </td>
-                </tr>
-
-                <tr>
-                    <td class="border px-4 py-2">Pedro Los Baños</td>
-                    <td class="border px-4 py-2">Marketing Manager</td>
-                    <td class="border px-4 py-2">Marketing</td>
-                    <td class="border px-4 py-2">pedro_los_banos@sinksrus.com</td>
-                    <td class="border px-4 py-3">
-                      <a href="#pedro" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View</a>
-                      <div id="pedro" class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 items-center justify-center target:flex">
+              </tr>
+              <tr>
+                  <td class="border px-4 py-2">Emma Wilson</td>
+                  <td class="border px-4 py-2">CEO</td>
+                  <td class="border px-4 py-2">Admin</td>
+                  <td class="border px-4 py-2">emma@sinksrus.com</td>
+                  <td class="border px-4 py-3">
+                      <a href="#emma" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View</a>
+                      <div id="emma" class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 items-center justify-center target:flex">
                         <div class="bg-white rounded-lg p-6 w-96 relative">
                           <a href="#" class="absolute top-3 right-3 text-gray-500 text-2xl hover:text-gray-700">x</a>
                           <h2 class="text-2xl font-semibold mb-4">Employee Details</h2>
                           <ul class="text-base">
-                            <li>Contact Number: n/a </li>
-                            <li>Address: 123 Mabini St</li>
-                            <li>Sex: Male</li>
+                            <li>Contact Number: 555-1111</li>
+                            <li>Address: n/a</li>
+                            <li>Sex: Female</li>
                             <li>Marital Status: Married</li>
                           </ul>
                         </div>
                       </div>
                   </td>
-                </tr>
-                
-                <tr>
-                    <td class="border px-4 py-2">Ana Gómez</td>
-                    <td class="border px-4 py-2">HR Specialist</td>
-                    <td class="border px-4 py-2">HR</td>
-                    <td class="border px-4 py-2">ana.gomez@sinksrus.com</td>
-                    <td class="border px-4 py-3">
-                        <a href="#ana" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View</a>
-                        <div id="ana" class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 items-center justify-center target:flex">
-                          <div class="bg-white rounded-lg p-6 w-96 relative">
-                            <a href="#" class="absolute top-3 right-3 text-gray-500 text-2xl hover:text-gray-700">x</a>
-                            <h2 class="text-2xl font-semibold mb-4">Employee Details</h2>
-                              <ul class="text-base">
-                                <li>Contact Number: 555-1526</li>
-                                <li>Address: n/a</li>
-                                <li>Sex: Female</li>
-                                <li>Marital Status: Divorced</li>
-                              </ul>
-                          </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="border px-4 py-2">John Wu</td>
-                    <td class="border px-4 py-2">Sales Associate</td>
-                    <td class="border px-4 py-2">Sales</td>
-                    <td class="border px-4 py-2">john.wu@sinksrus.com</td>
-                    <td class="border px-4 py-3">
-                        <a href="#john" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View</a>
-                        <div id="john" class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 items-center justify-center target:flex">
-                          <div class="bg-white rounded-lg p-6 w-96 relative">
-                            <a href="#" class="absolute top-3 right-3 text-gray-500 text-2xl hover:text-gray-700">x</a>
-                            <h2 class="text-2xl font-semibold mb-4">Employee Details</h2>
-                            <ul class="text-base">
-                              <li>Contact Number: 555-6925</li>
-                              <li>Address: 456 Rizal St</li>
-                              <li>Sex: Male</li>
-                              <li>Marital Status: Single</li>
-                            </ul>
-                          </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="border px-4 py-2">Emma Wilson</td>
-                    <td class="border px-4 py-2">CEO</td>
-                    <td class="border px-4 py-2">Admin</td>
-                    <td class="border px-4 py-2">emma@sinksrus.com</td>
-                    <td class="border px-4 py-3">
-                        <a href="#emma" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View</a>
-                        <div id="emma" class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 items-center justify-center target:flex">
-                          <div class="bg-white rounded-lg p-6 w-96 relative">
-                            <a href="#" class="absolute top-3 right-3 text-gray-500 text-2xl hover:text-gray-700">x</a>
-                            <h2 class="text-2xl font-semibold mb-4">Employee Details</h2>
-                            <ul class="text-base">
-                              <li>Contact Number: 555-1111</li>
-                              <li>Address: n/a</li>
-                              <li>Sex: Female</li>
-                              <li>Marital Status: Married</li>
-                            </ul>
-                          </div>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-  </body>
+              </tr>
+          </tbody>
+      </table>
+  </div>
+</body>
 </html>
   
