--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body class="bg-cover bg-center bg-cover h-screen" style="background-image: url(/assets/sinkssysbg2.png);">
 
-  <header class="bg-slate-700 h-16 w-full fixed  ">
+  <header class="bg-slate-700 h-16 w-full fixed">
     <div class="flex flex-col justify-center items-center">
       <h1 class="font-mono italic font-bold text-gray-300 text-3xl box-border flex-1"><i
           class="fa-solid fa-sink"></i>Sinks R Us</h1>
@@ -21,46 +21,52 @@
     </div>
   </header>
 
-  <div class="flex justify-center items-center h-screen">
-    <div class="w-96 p-8 space-y-4 shadow-lg bg-white rounded-lg">
-      <h1 class="font-sans font-bold text-3xl block text-center text-orange-400"><i
-          class="fa-solid fa-hand-sparkles"></i></i></i></i>Welcome to Sinks!</h1>
-      <hr class=>
+  <form action="employee_list.html" method="GET"></a>
+    <div class="flex justify-center items-center h-screen">
+      <div class="w-96 p-8 space-y-4 shadow-lg bg-white rounded-lg">
+        <h1 class="font-sans font-bold text-3xl block text-center text-orange-400"><i
+            class="fa-solid fa-hand-sparkles"></i></i></i></i>Welcome to Sinks!</h1>
+        <hr class=>
 
-      <div class="space-y-3">
-        <label for="username" class="block text-base mb-2">Username</label>
-        <input type="text" id="username"
-          class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-zinc-900 rounded-lg"
-          placeholder="Enter Username">
-      </div>
+        <div class="space-y-3">
+          <label for="username" class="block text-base mb-2">Username</label>
+          <input type="text" id="username" required
+            class="peer mt-1 block w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-transparent"
+            placeholder="Enter Username">
 
-      <div class="space-y-3">
-        <label for="password" class="block text-base mb-2">Password</label>
-        <input type="password" id="password"
-          class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-zinc-900 rounded-lg"
-          placeholder="Enter Password">
-      </div>
+          <span class="hidden peer-invalid:peer-focus:block mt-1 text-sm text-red-400">Please fill out this
+            field.</span>
+        </div>
 
-      <div class="flex justify-between items-center">
-        <div>
-          <input type="checkbox">
-          <label>Remember Me</label>
+        <div class="space-y-3">
+          <label for="password" class="block text-base mb-2">Password</label>
+          <input type="password" id="password" required
+            class="peer mt-1 block w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-transparent"
+            placeholder="Enter Password">
+
+          <span class="hidden peer-invalid:peer-focus:block mt-1 text-sm text-red-400">Please fill out this
+            field.</span>
+        </div>
+
+        <div class="flex justify-between items-center">
+          <div>
+            <input type="checkbox">
+            <label>Remember Me</label>
+          </div>
+
+          <div>
+            <a href="#" class="font-semibold text-orange-700">Forgot Password?</a>
+          </div>
         </div>
 
         <div>
-          <a href="#" class="font-semibold text-orange-700">Forgot Password?</a>
-        </div>
-      </div>
-
-      <div>
-        <form action="employee_list.html" method="GET"></a>
           <button type="submit"
-            class="border-2 py-1 w-full rounded-full border-slate-700 bg-slate-700 text-orange-300 hover:bg-orange-300 hover:text-slate-800 hover:border-orange-300  shadow-md shadow-slate-700">
+            class="border-2 py-1 w-full rounded-full border-slate-700 bg-slate-700 text-orange-300 hover:bg-orange-300 hover:text-slate-800 hover:border-orange-300 focus:ring-2  shadow-md shadow-slate-700">
             Login</button>
-        </form>
+        </div>
       </div>
     </div>
-
+  </form>
 
 </body>
 
