Updated employee list

--- a/employee_list.html
+++ b/employee_list.html
@@ -39,7 +39,7 @@
           <td class="border px-4 py-2">IT</td>
           <td class="border px-4 py-2">ivan.petrov@sinksrus.com</td>
           <td class="border px-4 py-3">
-            <a href="#ivan" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View</a>
+            <a href="#ivan" class="bg-slate-600 text-orange-300 hover:bg-orange-300 hover:text-slate-800 px-4 py-2 rounded">View</a>
             <div id="ivan"
               class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 items-center justify-center target:flex">
               <div class="bg-white rounded-lg p-6 w-96 relative">
@@ -63,7 +63,7 @@
           <td class="border px-4 py-2">Marketing</td>
           <td class="border px-4 py-2">pedro_los_banos@sinksrus.com</td>
           <td class="border px-4 py-3">
-            <a href="#pedro" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View</a>
+            <a href="#pedro" class="bg-slate-600 text-orange-300 hover:bg-orange-300 hover:text-slate-800 px-4 py-2 rounded">View</a>
             <div id="pedro"
               class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 items-center justify-center target:flex">
               <div class="bg-white rounded-lg p-6 w-96 relative">
@@ -86,7 +86,7 @@
           <td class="border px-4 py-2">HR</td>
           <td class="border px-4 py-2">ana.gomez@sinksrus.com</td>
           <td class="border px-4 py-3">
-            <a href="#ana" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View</a>
+            <a href="#ana" class="bg-slate-600 text-orange-300 hover:bg-orange-300 hover:text-slate-800 px-4 py-2 rounded">View</a>
             <div id="ana"
               class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 items-center justify-center target:flex">
               <div class="bg-white rounded-lg p-6 w-96 relative">
@@ -108,7 +108,7 @@
           <td class="border px-4 py-2">Sales</td>
           <td class="border px-4 py-2">john.wu@sinksrus.com</td>
           <td class="border px-4 py-3">
-            <a href="#john" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View</a>
+            <a href="#john" class="bg-slate-600 text-orange-300 hover:bg-orange-300 hover:text-slate-800 px-4 py-2 rounded">View</a>
             <div id="john"
               class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 items-center justify-center target:flex">
               <div class="bg-white rounded-lg p-6 w-96 relative">
@@ -130,7 +130,7 @@
           <td class="border px-4 py-2">Admin</td>
           <td class="border px-4 py-2">emma@sinksrus.com</td>
           <td class="border px-4 py-3">
-            <a href="#emma" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View</a>
+            <a href="#emma" class="bg-slate-600 text-orange-300 hover:bg-orange-300 hover:text-slate-800 px-4 py-2 rounded">View</a>
             <div id="emma"
               class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 items-center justify-center target:flex">
               <div class="bg-white rounded-lg p-6 w-96 relative">
@@ -155,7 +155,7 @@
       <form action="index.html" method="GET"></a>
         <button type="submit"
           class="border-8 py-3 w-full rounded-full border-slate-700 bg-slate-700 text-orange-300 hover:bg-orange-300 hover:text-slate-800 hover:border-orange-300  shadow-sm  shadow-slate-700">
-          Logout</button>
+          Exit</button>
       </form>
     </div>
     </div>
