Fixing background picture

--- a/employee_list.html
+++ b/employee_list.html
@@ -10,7 +10,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="h-screen flex items-center justify-center bg-slate-200">
+<body class="h-screen flex items-center justify-center bg-[url('/assets/sinkssysbg3.png')] bg-cover bg-center">
   <header class="bg-slate-700 h-16 w-full fixed top-0">
     <div class="flex flex-col justify-center items-center">
       <h1 class="font-mono italic font-bold text-gray-300 text-3xl box-border flex-1"><i
